--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -10,7 +10,7 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  eval = FALSE
 )
 ```
 
@@ -134,7 +134,7 @@ benchmark(
   "/p/projects/lpjml/benchmark_run_outputs/5.8.1/output",
   list(
     "/p/projects/lpjml/benchmark_run_outputs/5.7.7/output",
-    # note that older versions than 5.7.1 can at the moment not be benchmarked due 
+    # note that older versions than 5.7.1 can at the moment not be benchmarked due
     # to missing terr_area output
     "/p/projects/lpjml/benchmark_run_outputs/5.7.1/output"
   ),
