--- a/vignettes/benchmark-change-settings.Rmd
+++ b/vignettes/benchmark-change-settings.Rmd
@@ -98,7 +98,7 @@ metric_opt <- list(TimeAvgMap = list(highlight = c("soiltemp1")))
 Now we are ready to start the benchmarking, 
 with the new extended settings as an additional argument:
 ```{r start_adjusted_benchmark}
-benchmark_results <-
+benchmark_result <-
   benchmark(
     "/p/projects/lpjml/benchmark_run_outputs/5.7.1/output",
     "/p/projects/lpjml/benchmark_run_outputs/5.8.6/output",
