--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -43,7 +43,7 @@ of LPJmL changed, going from version 5.7.1 to version 5.8.6.
 
 Start by loading the package.
 ``` {r load_package}
-library(lpjmlstats)
+library(lpjmlstats) # nolint
 ```
 
 For a quick completion of the tutorial, we will only look at 
@@ -61,9 +61,9 @@ the under test and baseline output directories, along with some meta-information
 ``` {r perform-first-benchmark}
 benchmark_result <-
   benchmark(
-    baseline_dir = "/p/projects/lpjml/benchmark_run_outputs/5.7.1/output",
+    baseline_dir = "/p/projects/lpjml/benchmark_run_outputs/5.7.1/output",    # nolint
     # it is recommended to use absolute paths
-    under_test_dirs = "/p/projects/lpjml/benchmark_run_outputs/5.8.6/output",
+    under_test_dirs = "/p/projects/lpjml/benchmark_run_outputs/5.8.6/output", # nolint
     author = "David",
     description = "Evaluate the changes from version 5.7.1 to 5.8.6",
     output_file = "benchmark_vignette.pdf"
@@ -131,12 +131,12 @@ For example, it could be interesting to compare the 5.8.1 version with several
 older versions.
 ``` {r bechmark_multiple_under_test, eval = F}
 benchmark(
-  "/p/projects/lpjml/benchmark_run_outputs/5.8.1/output",
+  "/p/projects/lpjml/benchmark_run_outputs/5.8.1/output",   # nolint
   list(
-    "/p/projects/lpjml/benchmark_run_outputs/5.7.7/output",
+    "/p/projects/lpjml/benchmark_run_outputs/5.7.7/output", # nolint
     # note that older versions than 5.7.1 can at the moment not be benchmarked due
     # to missing terr_area output
-    "/p/projects/lpjml/benchmark_run_outputs/5.7.1/output"
+    "/p/projects/lpjml/benchmark_run_outputs/5.7.1/output"  # nolint
   ),
   author = "David",
   description = "Check how newer lpjml versions compare to older versions",
