non-global benchmarking; coarser country border overlay; user provided sim_ident; optional subheadings in metrics

--- a/inst/Benchmark_markdown.Rmd
+++ b/inst/Benchmark_markdown.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
   dpi = getOption("lpjmlstats.pdf_plot_dpi", 300),
   dev = getOption("lpjmlstats.graphics_device", "png"),
   crop = NULL,
+  fig.pos = "H",
   fig.height = getOption("lpjmlstats.fig_height", 2.4)
 )
 ```
