--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -138,6 +138,20 @@ benchmark(
 Comparing more than two under test to the baseline may result in display problems in the 
 PDF report.
 
+You can also give short identifiers for the simulation that will be used throughout at this point:
+``` {r bechmark_multiple_under_test_custom_names, eval = F}
+benchmark(
+  list(my_baseline = "/p/projects/lpjml/benchmark_run_outputs/5.8.1/output"),   # nolint
+  list(
+    my_test1 = "/p/projects/lpjml/benchmark_run_outputs/5.7.7/output", # nolint
+    # note that older versions than 5.7.1 can at the moment not be benchmarked due
+    # to missing terr_area output
+    my_test2 = "/p/projects/lpjml/benchmark_run_outputs/5.7.1/output"  # nolint
+  ),
+  ...
+)
+```
+
 
 # Working with the benchmark results
 
